# latex-paper-template

./: .gitignore  .latexmkrc  Everything.html  Example.html  README.html  README.md  agda-from-toplevel.sh  agda-haskell-symbols.tex  agda.tex  haskell-from-toplevel.sh  haskell.tex  init-lhs.sh  init-missing-lagda.sh  paper.tex  preamble.tex  unicode.tex
.github/workflows/: compile.yaml  haskell-compile-and-test.yaml
agda/: Example.lagda  README.agda  agda.agda-lib
agda-tex/agda/: Everything.html  Example.html
code/: Example.lagda  code.agda-lib
haskell/: .ghci  Example.html  Example.lhs  doc-index.html  haskell.cabal  haskell.haddock  index.html
haskell/src/: Example.html
haskell/test/: Spec.hs
scripts/: agda-from-toplevel.sh  check-all-agda.sh  check-all.sh  generate-everything-agda.sh  generate-everything.sh  github-compile-local-agda.sh
sections/: AgdaStuff.tex  HaskellStuff.tex
