cabal-version:       >=1.10

name:                haskell
version:             0.1.0.0
synopsis:            The local literate haskell code for this paper.
build-type:          Simple

library
  build-depends:       base >=4.13 && <5
                     , lean-peano >=1.0 && <1.1
                     , containers >=0.6.4 && <0.6.5
  default-language:    Haskell2010
