cabal-version:       >=1.10

name:                haskell
version:             0.1.0.0
synopsis:            The local literate haskell code for this paper.
build-type:          Simple

library
  exposed-modules:     Example
  build-depends:       base >=4.13 && <5
                     , containers >=0.6.4 && <0.6.5
  default-language:    Haskell2010

test-suite haskell-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      QuickCheck >= 2.14
    , haskell
    , base >= 4.13
    , tasty-quickcheck >= 0.10
    , tasty >= 1.4
  default-language: Haskell2010
